# NucH2Integrate

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CHANGELOG.md  README.md  environment.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: config.yaml
.github/workflows/: ci.yml
docs/: CONTRIBUTING.md  _config.yml  _toc.yml  api.md  build_book.sh  generate_class_hierarchy.py  intro.md
docs/_static/: class_hierarchy.html
docs/control/: control_overview.md  controller_demonstrations.md  open-loop_controllers.md  pyomo_controllers.md
docs/demand/: demand_components.md  demand_demo.md
docs/developer_guide/: adding_a_new_technology.md  class_structure.md  why_make_h2integrate.md
docs/finance_models/: ProFastBase.md  ProFastComp.md  ProFastNPV.md  finance_index.md
docs/getting_started/: environment_variables.md  expected_user_knowledge.md  install.md
docs/misc_resources/: turbine_models_library_preprocessing.md
docs/resource/: goes_solar_v4_api.md  himawari_v3_api.md  meteosat_prime_meridian_v4_api.md  resource_index.md  solar_index.md  tidal_resource.md  wind_index.md  wind_toolkit_v2_api.md
docs/storage/: hydrogen_storage.md  pysam_battery.md  simple_generic_storage.md  storage_models_index.md
docs/technology_models/: ammonia.md  ammonia_synloop_dynamics.md  atb_costs_pv.md  atb_costs_wind.md  co2.md  feedstocks.md  geologic_hydrogen.md  grid.md  h2_fuel_cell.md  h2_smr.md  iron_dri.md  iron_mine.md  marine_hydrokinetic.md  methanol.md  natural_gas.md  nuclear.md  pvwattsv8_solar_pv.md  run_of_river.md  steel_eaf.md  steel_eaf_cmu.md  tidal.md  wind_plant_ard.md  windpower_wind_plant.md  wombat_electrolyzer_om.md
docs/user_guide/: connecting_technologies.md  design_of_experiments_in_h2i.md  design_optimization_in_h2i.md  how_to_interface_with_user_defined_model.md  how_to_run_several_cases_in_sequence.md  how_to_set_up_an_analysis.md  model_overview.md  parameter_sweep_in_h2i.md  plotting_geospatial_data_with_geopandas.md  postprocessing_results.md  run_size_modes.md  specifying_finance_parameters.md
examples/01_onshore_steel_mn/: plant_config.yaml  run_onshore_steel_mn.py  tech_config.yaml
examples/02_texas_ammonia/: plant_config.yaml  run_texas_ammonia_plant.py  tech_config.yaml
examples/04_geo_h2/: plant_config_natural.yaml  plant_config_stimulated.yaml
examples/05_wind_h2_opt/: plant_config.yaml  run_wind_electrolyzer.py
examples/06_custom_tech/: plant_config.yaml  run_wind_paper.py  tech_config.yaml
examples/07_run_of_river_plant/: plant_config.yaml  run_river.py
examples/08_wind_electrolyzer/: plant_config.yaml
examples/10_electrolyzer_om/: plant_config.yaml  run_electrolyzer_om.py
examples/11_hybrid_energy_plant/: plant_config.yaml  run_wind_pv_battery.py
examples/12_ammonia_synloop/: plant_config.yaml  run_ammonia_synloop.py  tech_config.yaml
examples/13_dispatch_for_electrolyzer/: driver_config.yaml  plant_config.yaml  run_dispatch_for_electrolyzer.py  tech_config.yaml
examples/14_wind_hydrogen_dispatch/: hydrogen_dispatch.py
examples/15_wind_solar_electrolyzer/: plant_config.yaml  run_wind_solar_electrolyzer.py
examples/16_natural_gas/: plant_config.yaml  run_natural_gas.py  tech_config.yaml
examples/17_splitter_wind_doc_h2/: plant_config.yaml
examples/18_pyomo_heuristic_dispatch/: plant_config.yaml  run_pyomo_heuristic_dispatch.py  tech_config.yaml
examples/19_simple_dispatch/: plant_config.yaml  run_wind_battery.py  tech_config.yaml
examples/20_solar_electrolyzer_doe/: 20_solar_electrolyzer_doe.yaml  driver_config.yaml  run_csv_doe.py
examples/21_iron_mn_to_il/: 21_iron.yaml  driver_config.yaml  plant_config.yaml  run_iron.py  tech_config.yaml
examples/22_site_doe/: 22_solar_site_doe.yaml  driver_config.yaml  run_site_doe.py
examples/23_solar_wind_ng_demand/: flexible_demand_tech_config.yaml  plant_config.yaml  run_solar_wind_ng_demand.py  tech_config.yaml
examples/24_solar_battery_grid/: README.md  plant_config.yaml  run_solar_battery_grid.py  tech_config.yaml
examples/25_sizing_modes/: plant_config.yaml  run_size_modes.py  tech_config.yaml
examples/26_floris/: plant_config.yaml  run_floris_example.py
examples/27_site_doe_diff/: driver_config.yaml  plant_config.yaml  run_site_doe.py
examples/29_wind_ard/: run_windard_pv_battery.py
examples/30_pyomo_optimized_dispatch/: plant_config.yaml  run_pyomo_optimized_dispatch.py  tech_config.yaml
examples/31_iron_electrowinning/: plant_config.yaml  tech_config.yaml
examples/31_tidal/: driver_config.yaml  plant_config.yaml  run_tidal.py  tech_config.yaml  tidal.yaml
examples/32_multivariable_streams/: 32_multivariable_streams.yaml  driver_config.yaml  plant_config.yaml  run_multivariable_streams.py  tech_config.yaml
examples/33_peak_load_management/: 33_peak_load_management.yaml  plant_config.yaml  run_peak_load_management.py  tech_config.yaml
examples/34_plm_optimized_dispatch/: 34_plm_optimized_dispatch.yaml  driver_config.yaml  plant_config.yaml  run_plm_optimized_dispatch.py  tech_config.yaml  test_controller_methods.ipynb
examples/99_nuclear_reactor/: driver_config.yaml  nuclear_reactor_example.ipynb  plant_config.yaml  run_nuclear_reactor_htse_lte.py  tech_config.yaml
examples/99_nuclear_reactor_htse/: driver_config.yaml  gitcheckdoc.txt  nuclear_reactor_example.ipynb  nuclear_reactor_thermal_htse.yaml  plant_config.yaml  run_nuclear_reactor_thermal.py  tech_config.yaml
examples/test/: test_all_examples.py
h2integrate/: __init__.py
h2integrate/converters/: __init__.py  generic_converter_cost.py
h2integrate/core/: commodity_stream_definitions.py  dict_utils.py  dynamics.py  feedstocks.py  file_utils.py  h2integrate_model.py  model_baseclasses.py  pose_optimization.py  supported_models.py  utilities.py  validators.py
h2integrate/demand/: __init__.py  demand_base.py  flexible_demand.py  generic_demand.py
h2integrate/feedstocks/: __init__.py  eia_ng_price.py  feedstocks.py
h2integrate/finances/: __init__.py  finances.py  profast_base.py  profast_lco.py
test/: conftest.py
(+324 files in other folders)
