[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "h2integrate"
dynamic = ["version"]
authors = [
  {name = "Kaitlin Brunik"},
  {name = "Elenya Grant"},
  {name = "Jared Thomas"},
  {name = "Genevieve Starke"},
  {name = "Jonathan Martin"},
  {name = "Dakota Ramos"},
  {name = "Mariya Koleva"},
  {name = "Evan Reznicek"},
  {name = "Rob Hammond"},
  {name = "Brooke Stanislawski"},
  {name = "Charlie Kiefer"},
  {name = "Cameron Irmas"},
  {name = "Sanjana Vijayshankar"},
  {name = "Nicholas Riccobono"},
  {name = "Cory Frontin"},
  {name = "Caitlyn Clark"},
  {name = "Aaron Barker"},
  {name = "Abhineet Gupta"},
  {name = "Benjamin Kee"},
  {name = "Jennifer King"},
]
maintainers = [
  {name = "John Jasa", email = "john.jasa@nlr.gov"},
  {name = "Christopher Bay", email = "christopher.bay@nlr.gov"},
]
readme = {file = "README.md", content-type = "text/markdown"}
description = "Holistic Hybrids Optimization and Design Tool"
requires-python = ">=3.11, <3.14"
license = {file = "LICENSE"}
dependencies = [
  "attrs",
  "CoolProp<7.0.0",
  "geopy",
  "jsonschema",
  "marine-carbon-management",
  "matplotlib",
  "numpy",
  "numpy-financial",
  "openmdao",
  "openmeteo-requests",
  "pandas>=2.0.3",
  "ProFAST",
  "Pyomo>=6.1.2",
  "rainflow",
  "requests-cache",
  "retry_requests",
  "rich>=13.7.0",
  "ruamel.yaml",
  "scipy",
  "orbit-nrel",
  "floris",
  "hopp>=3.3.0",
  "turbine-models>=0.2.1",
  "wombat>=0.13.3",
]
keywords = [
    "python3",
    "hybrid-energy",
    "wind-energy",
    "solar-energy",
    "layout-optimization",
]
classifiers = [  # https://pypi.org/classifiers/
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
source = "https://github.com/NatLabRockies/H2Integrate"
documentation = "https://h2integrate.readthedocs.io/"
issues = "https://github.com/NatLabRockies/H2Integrate/issues"
changelog = "https://github.com/NatLabRockies/H2Integrate/blob/main/CHANGELOG.md"

[project.optional-dependencies]
develop = [
    "isort",
    "jupyter-book<2",
    "networkx",
    "pre-commit",
    "pyvis",
    "pytest>=9",
    "pytest-cov",
    "ruff",
    "sphinxcontrib-napoleon",
    "yamlfix"
]
examples = [
  "jupyterlab",
  "h2integrate[gis,ard]"
]
gis = [
  "geopandas",
  "contextily"
]
ard = ["ard-nrel"]
extras = ["h2integrate[gis,ard]"]
all = ["h2integrate[develop,extras,examples]"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages]
find = {}

[tool.setuptools.dynamic]
version = {attr = "h2integrate.__version__"}

[tool.coverage.report]
exclude_lines = ["# pragma: no cover"]

[tool.coverage.run]
# Coverage.py configuration file
# https://coverage.readthedocs.io/en/latest/config.html
branch = true
source = ["h2integrate/*"]
omit = [
  "*/test/*",
  "*/test_*.py"
]

[tool.pytest]
addopts = [
  "--strict-markers",
  "-r fEsxX",
]
tmp_path_retention_count = "1"
tmp_path_retention_policy = "failed"
cache_dir = ".cache"
markers = [
    "unit: marks unit tests (deselect with '-m \"not unit\"')",
    "regression: marks regression tests (deselect with '-m \"not regression\"')",
    "integration: marks unit tests (deselect with '-m \"not integration\"')",
]

[tool.isort]
src_paths = ["h2integrate", "test"]
skip = ["__init__.py"]
multi_line_output = 3
sections = [
  "FUTURE",
  "STDLIB",
  "THIRDPARTY",
  "FIRSTPARTY",
  "LOCALFOLDER",
]
known_first_party = "h2integrate"
known_third_party = "pytest"
known_local_folder = "test"
combine_as_imports = true
force_grid_wrap = 0
include_trailing_comma = true
use_parentheses = true
length_sort = true
lines_after_imports = 2
line_length = 100

[tool.ruff]
src = ["h2integrate", "tests"]
line-length = 100
target-version = "py311"
fix = true
exclude = [
  ".git",
  "__pycache__",
  "old",
  "build",
  "dist",
  ".ruff_cache",
]

[tool.ruff.lint]
fixable = ["ALL"]
unfixable = []

# https://docs.astral.sh/ruff/rules/
select = [
  "F",
  "E",
  "W",
  # "N",  # TODO: renaming needs to be seriously cleaned up prior to using
  "C4",
  # "D",  # leave out until rebrand/refactor
  "UP",
  "BLE",
  # "FBT",  # TODO: consider alongside rebrand/refactor
  "B",
  "A",
  "LOG",
  "G",
  # "PT",  # TODO: very tedious for now
  "NPY",
  "PD",
  "PTH",
  "PERF",
  "Q",
  "FURB",
  "RUF",
]

ignore = [
  "E731",
  "E402",
  "D202",
  "D205",
  "D212",
  "D401",
  "PERF203",
  "PD011",
  "PD901",
  "RUF015",
  "N806",  # NOTE: many variable names use an uppercase for legitimate reasons
  "N802",  # NOTE: many function names use an uppercase for legitimate reasons
  "B905",

  # TODO: People who wrote warnings should decide on the appropriate stacklevel
  "B028",

  # TODO: People responsible for these errors will need to fix them accordingly as they are bugs
  "B006",
  "B008",
  "B023",
]

[tool.ruff.lint.per-file-ignores]
"*/__init__.py" = ["E501", "D104", "F401"]
"test/*" = ["D100", "D101", "D102", "D103"]

[tool.ruff.lint.pycodestyle]
ignore-overlong-task-comments = true

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-third-party = ["pytest"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
docstring-code-format = true

[tool.yamlfix]
allow_duplicate_keys = true
line_length = 120
none_representation = "null"
explicit_start = false
# quote_representation = '"'  # NOTE: uncomment when issue is resolved: https://github.com/lyz-code/yamlfix/issues/252
sequence_style = "keep_style"
